<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    
    <!-- Create Event Shortcut -->
    <shortcut
        android:shortcutId="create_event_shortcut"
        android:enabled="true"
        android:icon="@drawable/ic_event"
        android:shortcutShortLabel="@string/create_event_short_label"
        android:shortcutLongLabel="@string/create_event_long_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="wakeve://event/create"
            android:targetPackage="com.guyghost.wakeve"
            android:targetClass="com.guyghost.wakeve.MainActivity" />
        <categories android:name="android.shortcut.conversation"/>
    </shortcut>
    
    <!-- Open Calendar Shortcut -->
    <shortcut
        android:shortcutId="open_calendar_shortcut"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:shortcutShortLabel="@string/open_calendar_short_label"
        android:shortcutLongLabel="@string/open_calendar_long_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="wakeve://calendar"
            android:targetPackage="com.guyghost.wakeve"
            android:targetClass="com.guyghost.wakeve.MainActivity" />
        <categories android:name="android.shortcut.conversation"/>
    </shortcut>
    
    <!-- Unread Notifications Shortcut -->
    <shortcut
        android:shortcutId="unread_notifications_shortcut"
        android:enabled="true"
        android:icon="@drawable/ic_share"
        android:shortcutShortLabel="@string/unread_notifications_short_label"
        android:shortcutLongLabel="@string/unread_notifications_long_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="wakeve://notifications?filter=unread"
            android:targetPackage="com.guyghost.wakeve"
            android:targetClass="com.guyghost.wakeve.MainActivity" />
        <categories android:name="android.shortcut.conversation"/>
    </shortcut>
    
</shortcuts>
